separating ui tests
Change-Id: Iacfd8e1c15e9746c296fd289a6d78a82a46a63cc